WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305702
[block-in-inline] ASSERT in RenderTreeNeedsLayoutChecker when re-building the current line
https://bugs.webkit.org/show_bug.cgi?id=305702
Summary
[block-in-inline] ASSERT in RenderTreeNeedsLayoutChecker when re-building the...
alan
Reported
2026-01-17 08:27:30 PST
<
rdar://166972460
>
Attachments
[fast-cq]Patch
(3.94 KB, patch)
2026-01-17 08:40 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2026-01-17 08:40:50 PST
Created
attachment 478058
[details]
[fast-cq]Patch
Antti Koivisto
Comment 2
2026-01-18 01:58:20 PST
Comment on
attachment 478058
[details]
[fast-cq]Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=478058&action=review
> LayoutTests/fast/inline/revert-line-to-overflowing-content-assert-expected.txt:1 > +ÂPASS if no crash or assert
Where is the junk here coming from?
EWS
Comment 3
2026-01-18 05:36:43 PST
Committed
305776@main
(c9bdb3e40b48): <
https://commits.webkit.org/305776@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 478058
[details]
.
alan
Comment 4
2026-01-18 05:41:00 PST
(In reply to Antti Koivisto from
comment #2
)
> Comment on
attachment 478058
[details]
> [fast-cq]Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=478058&action=review
> > > LayoutTests/fast/inline/revert-line-to-overflowing-content-assert-expected.txt:1 > > +ÂPASS if no crash or assert > > Where is the junk here coming from?
The test case has it, it just does not show up in the formatted diff view.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug