Cherry-pick c9bdb3e40b48. rdar://168699175

[block-in-inline] ASSERT in RenderTreeNeedsLayoutChecker when re-building the current line
    https://bugs.webkit.org/show_bug.cgi?id=305702
    <rdar://166972460>

    Reviewed by Antti Koivisto.

    When a line needs to roll back to the previous wrapping opportunity,
    we rebuild it by starting a new line and re-adding inline content until the wrapping point is reached, rather than trimming trailing content (see rebuildLineWithInlineContent).

    This patch addresses the case where the last wrapping opportunity is the special m_partialLeadingTextItem.
    As the name suggests, this represents a partial leading item on the line:
    it contains the right portion of an inline item whose left portion is on the previous line (e.g. when overflowing text is split).

    rebuildLineWithInlineContent previously failed to handle this case and would incorrectly commit inline items up to the end of the needsLayout range
    (see the for (; endOfCandidateContent < layoutRange.endIndex(); ++endOfCandidateContent) loop).

    Test: fast/inline/revert-line-to-overflowing-content-assert.html

    * LayoutTests/fast/inline/revert-line-to-overflowing-content-assert-expected.txt: Added.
    * LayoutTests/fast/inline/revert-line-to-overflowing-content-assert.html: Added.
    * Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
    (WebCore::Layout::LineBuilder::rebuildLineWithInlineContent):

    Canonical link: https://commits.webkit.org/305776@main

Identifier: 305413.92@safari-7624-branch